# mat-mod-opgaver

./: README.md  pyproject.toml
optical flow/: KernelFinding.py  VideoTesting.py
optical_flow/src/excercises/: problem_2.py  warm_up.py
qattara depression/: Interpolation.ipynb  SettingsResults.txt  heights.txt  nukeProblem2-5.jl  nukeProblem6.jl
qattara_depression/: Interpolate&Plot.py  Interpolation.ipynb  heights.txt  nukeExperimen3.jl  nukeExperiment1&2.jl  nukeProblem2-5.jl
salami/: Lukas code.ipynb  Salami code.py
salami-project/: README.md
salami-project/src/: analysis_of_data.py
salami/src/: Part2.ipynb  utils.py
salami/src/db/: data_paths.py
salami/src/example_code/: ExampleScript.py
salami/src/tasks/: analysis_of_data.py
