[project]
name = "mat-mod-opgaver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "sci-kit>=0.1.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
]


[tool.setuptools.packages.find]
where = ["salami/src", "optical_flow/src"]
